2000-07-01  Radek Doulik  <rodo@helixcode.com>

	* menubar.c (insert_link_cb): rewritten using properties dialog

	* popup.c (remove_link): use cd->html->engine->cursor->object
	instead of cd->obj which could be unset

2000-06-30  Radek Doulik  <rodo@helixcode.com>

	* link.c (link_properties): fix case when we get NULL url
	
2000-06-23  Radek Doulik  <rodo@helixcode.com>

	* text.c (text_properties): set initial color
	(text_properties): fixed style setting

2000-06-21  Radek Doulik  <rodo@helixcode.com>

	* popup.c (remove_link): it now uses html_engine_remove_link and
	html_engine_remove_link_object

	* link.c (button_link_cb): use rewritten html_engine_insert_link

	* popup.c (popup_show): always add insert link to popup menu

	* link.c: remove text entry, we want only set link

2000-06-20  Radek Doulik  <rodo@helixcode.com>

	* popup.c (popup_show): added insert link to popup menu when
	selection is active

2000-06-17  Ettore Perazzoli  <ettore@helixcode.com>

	* editor-control-factory.c (editor_control_factory): Create a
	PersistFile interface and add it to the control.

	* test-html-editor-control.c: `OP_LOAD' and `OP_SAVE' replaced by
	`OP_SAVE_THROUGH_PERSIST_STREAM',
	`OP_LOAD_THROUGH_PERSIST_STREAM', `OP_SAVE_THROUGH_PERSIST_FILE',
	`OP_LOAD_THROUGH_PERSIST_FILE'.  New separate menu items to
	save/load using the PersistStream or PersistFile interface.
	(save_through_persist_stream): Renamed from `save_through_stream'.
	(load_through_persist_stream): Renamed from `load_through_stream'.
	(save_through_persist_file): New.
	(save_through_persist_stream): New.
	(file_selection_ok_cb): Handle the new `OP_*' types.
	(open_through_persist_stream_cb): Renamed from `open_.
	(save_through_presist_stream_cb): Renamed from `save_as_cb'.
	(open_through_persist_file_cb): New.
	(save_through_persist_file_cb): New.

	* persist-file-impl.c: New.
	* persist-file-impl.h: New.

	* persist-stream-impl.c (load): Make non editable before feeding